// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkLabel should render correctly 1`] = `
<DocumentFragment>
  <label
    class="bpk-label"
  >
    Origin
  </label>
</DocumentFragment>
`;

exports[`BpkLabel should render correctly with "valid" attribute false 1`] = `
<DocumentFragment>
  <label
    class="bpk-label bpk-label--invalid"
  >
    Origin
  </label>
</DocumentFragment>
`;

exports[`BpkLabel should render correctly with "valid" attribute false and "required" attributes 1`] = `
<DocumentFragment>
  <label
    class="bpk-label bpk-label--invalid"
  >
    Origin
    <span
      class="bpk-label__asterisk"
    >
      *
    </span>
  </label>
</DocumentFragment>
`;

exports[`BpkLabel should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-label test"
  >
    Origin
  </label>
</DocumentFragment>
`;

exports[`BpkLabel should render correctly with a "required" attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-label"
  >
    Origin
    <span
      class="bpk-label__asterisk"
    >
      *
    </span>
  </label>
</DocumentFragment>
`;

exports[`BpkLabel should render correctly with a "white" attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-label bpk-label--white"
  >
    Origin
  </label>
</DocumentFragment>
`;

exports[`BpkLabel should render correctly without an asterisk when disabled and required 1`] = `
<DocumentFragment>
  <label
    class="bpk-label bpk-label--disabled"
  >
    Origin
  </label>
</DocumentFragment>
`;
